<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		tools:context=".LoginActivity">

	<TextView
			android:id="@+id/tvInicioSesion"
			style="@style/Theme.BancoAMK.Titulo"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@id/etUsuario"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:text="@string/login" />

	<EditText android:id="@+id/etUsuario"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/tvInicioSesion"
			app:layout_constraintBottom_toTopOf="@id/etContra"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:hint="@string/hintUser"
			android:text="@string/username"
			android:inputType="text"
			android:textSize="20sp" />

	<EditText android:id="@+id/etContra"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/etUsuario"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:hint="@string/hintPass"
			android:text="@string/password"
			android:inputType="textPassword"
			android:textSize="20sp" />

	<Button
			android:id="@+id/btEntrar"
			style="@style/Theme.BancoAMK.Botones"
			app:layout_constraintTop_toBottomOf="@id/etContra"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toStartOf="@id/btSalir"
			android:text="@string/enter"
			app:layout_constraintVertical_bias="0.20" />

	<Button
			android:id="@+id/btSalir"
			style="@style/Theme.BancoAMK.Botones"
			app:layout_constraintTop_toBottomOf="@id/etContra"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toEndOf="@id/btEntrar"
			app:layout_constraintEnd_toEndOf="parent"
			android:text="@string/exit"
			app:layout_constraintVertical_bias="0.20" />

</androidx.constraintlayout.widget.ConstraintLayout>